--- a/templates/courses/payement.html
+++ b/templates/courses/payement.html
@@ -41,7 +41,7 @@
                 <div class="col-6">
                     <div class='card mt-3 mb-5'>
                         <div class='card-body'>
-                            <h3 class='card-title mt-2'>{% trans "Echec de paiement Moncash" %}</h3>
+                            <h3 class='card-title mt-2'>{% trans "Echec de paiement" %}</h3>
                             {% include 'partials/_alerts.html' with messages=messages no_fade=True %}
                             <a class='btn btn-primary col-md-4 m-auto mb-5' href="{% url 'courses_home' %}">{% trans "Retour" %}</a>
                         </div>
