--- a/templates/courses/payement.html
+++ b/templates/courses/payement.html
@@ -18,6 +18,7 @@
                 <div class="col-12">
                     <ul class="list-unstyled multi-steps mt-4">
                         <li>{% trans 'Selection de la formation' %}</li>
+                        <li>{% trans 'Renseignements personnels' %}</li>
                         <li>{% trans 'Paiement réussi' %}</li>
                         <li class="is_active">{% trans 'Confirmation' %}</li>
                     </ul>
