--- a/templates/courses/enrollement.html
+++ b/templates/courses/enrollement.html
@@ -16,9 +16,10 @@
         <div class='row justify-content-center'>
             <div class="col-12">
                 <ul class="list-unstyled multi-steps">
-                    <li>{% trans 'Selection de la formation' %}</li>
-                    <li class="is-active">{% trans 'Paiement' %}</li>
-                    <li>{% trans 'Confirmation' %}</li>
+                    <li {% if soldOut %}class="is-active"{% endif %}>{% trans 'Selection de la formation' %}</li>
+                    <li>{% trans 'Renseignements personnels' %}</li>
+                    <li {% if not enrolled and not soldOut %}class="is-active"{% endif %}>{% trans 'Paiement' %}</li>
+                    <li {% if enrolled or soldOut %}class='is-active'{% endif %}>{% trans 'Confirmation' %}</li>
                 </ul>
             </div>
             <div class="col-lg-3 col-md-10 col-sm-12">
