--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -25,7 +25,8 @@
                 </div><br>
                 <div class="col-12">
                     <div class="mb-2">
-                      {% trans "Vous n'avez pas de compte?" %}  <a  href="{% url 'register' %}"> {% trans " Sign up " %}</a>
+                      {% trans "Vous n'avez pas de compte? Contactez l'administration" %}  
+                      <!-- <a  href="{% url 'register' %}"> {% trans " Sign up " %}</a> -->
                     </div>
                 </div>
             </form>
