--- a/templates/courses/attendee.html
+++ b/templates/courses/attendee.html
@@ -15,15 +15,15 @@
         <div class='row justify-content-center'>
             <div class="col-12">
                 <ul class="list-unstyled multi-steps mt-4">
-                    <li>{% trans 'Selection de la formation' %}</li>
-                    <li class="is-active">{% trans 'Renseignements personnels' %}</li>
+                    <li>{% trans 'Selection formation' %}</li>
+                    <li class="is-active">{% trans 'Infos personnels' %}</li>
                     <li>{% trans 'Paiement' %}</li>
                     <li>{% trans 'Confirmation' %}</li>
                 </ul>
             </div>   
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-5 col-sm-12">
+            <div class="col-md-4 col-sm-12">
                 <div class="card mt-3 mb-5">
                     <div class="card-body">
                         <h3 class="card-title">Renseignements personnels</h3>
