--- a/templates/courses/payement.html
+++ b/templates/courses/payement.html
@@ -17,7 +17,7 @@
             <div class='row justify-content-center'>
                 <div class="col-12">
                     <ul class="list-unstyled multi-steps mt-4">
-                        <li>{% trans 'Selection de la formation' %}</li>
+                        <li>{% trans 'Selection formation' %}</li>
                         <li>{% trans 'Renseignements personnels' %}</li>
                         <li>{% trans 'Paiement réussi' %}</li>
                         <li class="is_active">{% trans 'Confirmation' %}</li>
