--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -51,7 +51,7 @@
     </div>
 </div>
 <div id="team" class="container text-center mt-5 mb-2">
-    <h1 class="mb-0">Notre Equipes</h1>
+    <h1 class="mb-0">Notre Equipe</h1>
     {% comment %} <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum</span> {% endcomment %}
 </div>
 <div class="container mt-3">
