--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,20 @@
+/* BETA banner.
+--------------------------------------------------------------------------- */
+body:after {
+  content: "BETA";
+  color: #fff;
+  background: #d63626;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  padding: 0.2rem 1.9rem;
+  position: fixed;
+  z-index: 2;
+  top: 0.3rem;
+  left: -1.8rem;
+  transform: rotate(-45deg);
+}
+
 /* Layout.
 --------------------------------------------------------------------------- */
 body {
