--- a/templates/courses/home.html
+++ b/templates/courses/home.html
@@ -36,7 +36,7 @@
             </div>
             <!--end of col-->
         </div>
-        <div class='row col-12 m-0 mt-3 mb-3'>
+        <div class='row justify-content-center mt-3 mb-3'>
             {% if courses  %}
                 {% for course in courses %}
                     {% include 'partials/_course_card.html' with course=course courseDates=course.courseDates %}
