Add 403, 404, 500 Error Page

--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -111,7 +111,7 @@
                 <div class="mt-4">
                     <h6 class="v-profile">
                         (+509) 4695-4516</br>
-                        louismidsonlajeanty@gmail.com
+                        louismidson.lajeanty@esih.edu
                     </h6>
                 </div>
             </div>
